--- a/src/app.html
+++ b/src/app.html
@@ -14,6 +14,8 @@
 		</script>
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div class="app">%sveltekit.body%</div>
+		<div id="smooth-wrapper" class="app">
+			<div id="smooth-content">%sveltekit.body%</div>
+		</div>
 	</body>
 </html>
