--- a/src/app.html
+++ b/src/app.html
@@ -17,8 +17,6 @@
 		</script>
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div id="smooth-wrapper" class="app">
-			<div id="smooth-content">%sveltekit.body%</div>
-		</div>
+		<div class="app">%sveltekit.body%</div>
 	</body>
 </html>
